<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/text_welcome"
        android:text="@string/text_welcome"
        android:textColor="@color/green_text"
        android:textSize="@dimen/text_size_sm2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/text_score_satoshi"
        android:layout_width="270dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="45dp"
        android:layout_marginStart="16dp"
        android:textSize="22sp"
        android:textColor="@color/black_text"
        android:text="@string/satoshi_score"
        android:background="@drawable/rd_green_text"
        android:gravity="center_vertical|left"
        android:padding="6dp"/>
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="65dp"
        android:layout_marginStart="180dp"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/rd_white"
        />
    <TextView
        android:text="@string/text_balance"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="65dp"
        android:layout_marginStart="65dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_sm2"
        android:textColor="@color/black_text"
        />
    <TextView
        android:id="@+id/btc_score"
        android:text="@string/btc_score"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="200dp"
        android:layout_marginStart="65dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_sm1"
        android:textColor="@color/black_text"
        />

    <android.widget.Button
        android:id="@+id/button_start"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:textSize="@dimen/text_size_md"
        android:layout_marginStart="150dp"
        android:layout_marginTop="95dp"
        android:text="@string/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/rd"/>
    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="40dp"
        android:layout_height="200dp"
        android:progressDrawable="@drawable/vertical_progressbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="45dp"
        android:layout_marginStart="310dp"/>
    <TextView
        android:id="@+id/text_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/progressbar"
        app:layout_constraintStart_toStartOf="@id/progressbar"
        android:layout_marginTop="90dp"
        android:layout_marginStart="9dp"
        android:textSize="@dimen/text_size_sm1"
        android:textColor="@color/white_server" />
    <TextView
        android:id="@+id/text_boost"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="258dp"
        android:text="@string/text_boost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/button_boost"
        style="@style/button_style"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="289dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_boost"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="left"
        android:paddingStart="20dp"
        android:drawableLeft="@drawable/rocket_use"/>
    <TextView
        android:id="@+id/text_server"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="351dp"
        android:text="@string/text_server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/server_1"
        android:layout_width="80dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="21dp"
        android:layout_marginTop="389dp"
        android:src="@drawable/no_active_server"
        />
    <ImageView
        android:id="@+id/droplet_1"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="422dp"
        android:src="@drawable/gray_droplet_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/server_2"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="389dp"
        android:src="@drawable/no_active_server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/droplet_2"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="136dp"
        android:layout_marginTop="422dp"
        android:src="@drawable/gray_droplet_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/server_3"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="192dp"
        android:layout_marginTop="389dp"
        android:src="@drawable/no_active_server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/droplet_3"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="422dp"
        android:src="@drawable/gray_droplet_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/server_4"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:layout_marginStart="277dp"
        android:layout_marginTop="389dp"
        android:src="@drawable/no_active_server"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/droplet_4"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="308dp"
        android:layout_marginTop="422dp"
        android:src="@drawable/gray_droplet_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/ping_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="442dp"
        android:text="@string/text_server_ping"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/text_style_server"/>
    <TextView
        android:id="@+id/speed_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="438dp"
        android:text="6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/text_style_server"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/sm_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="442dp"
        android:text="@string/text_server_speed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/text_style_server"/>
    <TextView
        android:id="@+id/ping_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="442dp"
        android:text="@string/text_server_ping"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/text_style_server"/>
    <TextView
        android:id="@+id/speed_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="438dp"
        android:text="12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/text_style_server"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/sm_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="158dp"
        android:layout_marginTop="442dp"
        android:text="@string/text_server_speed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/text_style_server"/>
    <TextView
        android:id="@+id/ping_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="198dp"
        android:layout_marginTop="442dp"
        android:text="@string/text_server_ping"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/text_style_server"/>
    <TextView
        android:id="@+id/speed_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="219dp"
        android:layout_marginTop="438dp"
        android:text="25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/text_style_server"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/sm_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="244dp"
        android:layout_marginTop="442dp"
        android:text="@string/text_server_speed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/text_style_server"/>
    <TextView
        android:id="@+id/ping_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="284dp"
        android:layout_marginTop="442dp"
        android:text="@string/text_server_ping"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/text_style_server"/>
    <TextView
        android:id="@+id/speed_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="312dp"
        android:layout_marginTop="438dp"
        android:text="3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/text_style_server"
        android:textSize="20sp"/>
    <TextView
        android:id="@+id/sm_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="329dp"
        android:layout_marginTop="442dp"
        android:text="@string/text_server_speed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/text_style_server"/>

    <TextView
        android:id="@+id/text_raising"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="473dp"
        android:text="@string/text_raising"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/button_raising"
        style="@style/button_style"
        android:layout_width="348dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="504dp"
        android:layout_marginEnd="16dp"
        android:text="@string/button_receive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>